// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the shape of an element > a multi element starts at minItems 1`] = `
[
  {
    "@context": {
      "_f": "https://schema.metadatacenter.org/properties/490b6798-0000-4000-8000-490b67980000",
    },
    "@id": "<minted>",
    "_f": {
      "@value": null,
    },
  },
  {
    "@context": {
      "_f": "https://schema.metadatacenter.org/properties/490b6798-0000-4000-8000-490b67980000",
    },
    "@id": "<minted>",
    "_f": {
      "@value": null,
    },
  },
  {
    "@context": {
      "_f": "https://schema.metadatacenter.org/properties/490b6798-0000-4000-8000-490b67980000",
    },
    "@id": "<minted>",
    "_f": {
      "@value": null,
    },
  },
]
`;

exports[`the shape of an element > a single element 1`] = `
{
  "extract": {
    "@id": "<minted>",
    "_f": {
      "@value": null,
    },
  },
  "full": {
    "@context": {
      "_f": "https://schema.metadatacenter.org/properties/490b6798-0000-4000-8000-490b67980000",
    },
    "@id": "<minted>",
    "_f": {
      "@value": null,
    },
  },
}
`;

exports[`the slot a multi field starts with > attrValue > attrValue 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > checkbox > checkbox 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > controlled > controlled 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > doi > doi 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > email > email 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > link > link 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > listMulti > listMulti 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > listSingle > listSingle 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a multi field starts with > nihGrant > nihGrant 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > numeric > numeric (json-walk) 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > numeric > numeric (model-library) 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@type": "xsd:decimal",
      "@value": null,
    },
    {
      "@type": "xsd:decimal",
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > orcid > orcid 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > pfas > pfas 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > phone > phone 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > pubmed > pubmed 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > radio > radio 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a multi field starts with > ror > ror 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > rrid > rrid 1`] = `
{
  "extract": [
    {},
    {},
  ],
  "full": [
    {},
    {},
  ],
}
`;

exports[`the slot a multi field starts with > temporal > temporal (json-walk) 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > temporal > temporal (model-library) 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > text > text 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a multi field starts with > textarea > textarea 1`] = `
{
  "extract": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
  "full": [
    {
      "@value": null,
    },
    {
      "@value": null,
    },
  ],
}
`;

exports[`the slot a single field starts with > attrValue > attrValue 1`] = `
{
  "extract": [],
  "full": [],
}
`;

exports[`the slot a single field starts with > checkbox > checkbox 1`] = `
{
  "extract": [],
  "full": [],
}
`;

exports[`the slot a single field starts with > controlled > controlled 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > doi > doi 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > email > email 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > link > link 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > listMulti > listMulti 1`] = `
{
  "extract": [],
  "full": [],
}
`;

exports[`the slot a single field starts with > listSingle > listSingle 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > nihGrant > nihGrant 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > numeric > numeric (json-walk) 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > numeric > numeric (model-library) 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@type": "xsd:decimal",
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > orcid > orcid 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > pfas > pfas 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > phone > phone 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > pubmed > pubmed 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > radio > radio 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > ror > ror 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > rrid > rrid 1`] = `
{
  "extract": {},
  "full": {},
}
`;

exports[`the slot a single field starts with > temporal > temporal (json-walk) 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > temporal > temporal (model-library) 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > text > text 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;

exports[`the slot a single field starts with > textarea > textarea 1`] = `
{
  "extract": {
    "@value": null,
  },
  "full": {
    "@value": null,
  },
}
`;
